Arreglos en redirecciòn del login y promociones.Se acomodò circulo de espera en la carga.

--- a/cabecera.html
+++ b/cabecera.html
@@ -1,6 +1,6 @@
-<!--	<div class="preloader">
+	<div class="preloader">
 		<div class="preloader_image"></div>
-	</div>-->
+	</div>
 
 
 	<!-- wrappers for visual page editor and boxed version of template -->
