--- a/footer.html
+++ b/footer.html
@@ -70,12 +70,13 @@ function PonerCookie(){
 									Contacto: +34 693 60 88 61<br>
 									Email: Info@eliteescortmadrid.com<br>
 									Horario: 10:00 a 24:00<br>
+								<!--<a href="https://fb.me/eliteescortmadrid" target="_blank">Siguenos en facebook: <i class="fa fa-facebook"></i></a>-->
 									<!--<i style="font-size:24px" class="fa fa-cc-visa"></i>
 									<i style="font-size:24px" class="fa fa-cc-mastercard"></i>-->
 								</p>
 								<!--<div class="size_small">
-									<i class="fa fa-cc-visa"></i>
-									<i class="fa fa-cc-mastercard"></i>
+									<i class="fa fa-facebook"></i>
+									
 
 								</div>-->
 							</div>
