--- a/movil/footer.html
+++ b/movil/footer.html
@@ -13,8 +13,8 @@
 									Contacto: +34 693 60 88 61<br>
 									Email: Info@eliteescortmadrid.com<br>
 									Horario: 10:00 a 24:00<br>
-									<!--<i style="font-size:24px" class="fa fa-cc-visa"></i>
-									<i style="font-size:24px" class="fa fa-cc-mastercard"></i>-->
+									<!--<a href="https://fb.me/eliteescortmadrid" target="_blank">Siguenos en facebook: <i class="fa fa-facebook"></i></a>-->
+									<!--<i style="font-size:24px" class="fa fa-cc-mastercard"></i>-->
 								</p>
 
 							</div>
