Agregando navidad a la web

--- a/movil/footer.html
+++ b/movil/footer.html
@@ -77,4 +77,14 @@
 
 
 </body>
+<script src='/js/snowfall.jquery.js'></script>
+<script type='text/javascript'> 
+	
+$(document).ready(function(){
+			
+$(document).snowfall({deviceorientation : true, round : true, minSize: 1, maxSize:8,  flakeCount : 250});
+
+});
+
+ </script>
 </html>
