--- a/cabecera.html
+++ b/cabecera.html
@@ -8,8 +8,10 @@
 		<div id="box_wrapper">
 
 			<div style="text-align: center;background-image:url(/images/otrofondoemparejado.jpg); padding-top: 0px; padding-bottom: 10px;	">
-				<img src="/images/logoelite2.png" alt="Logo Elite Escorts Madrid">
-
+				<!--<img src="/images/logoelite2.png" alt="Logo Elite Escorts Madrid">-->
+				<img src="/images/izquierda.png" alt="Logo Elite Escorts Madrid">
+				<img src="/images/logo-navidad.png" alt="Logo Elite Escorts Madrid">
+				<img src="/images/derecha.png" alt="Logo Elite Escorts Madrid">
 
 				<!--<img src="/images/head.png" alt=""><br>
 				<img src="/images/LETRAS.png" alt=""><br>-->
