Separación de código de servicios y adición de iconos MC y Visa. En móvil y pc

--- a/cabecera.html
+++ b/cabecera.html
@@ -1,5 +1,11 @@
 	<div class="preloader">
-		<div class="preloader_image"></div>
+		<div class="preloader_image">
+		</div>
+		<div style="text-align: center;position: relative;top: 60%;-ms-transform: translateY(-50%);
+		-webkit-transform: translateY(-50%);
+		transform: translateY(-50%);">
+			<h2 style="color:#EDCF91;">Espere un momento por favor...</h2>
+		</div>
 	</div>
 
 
