--- a/footer.html
+++ b/footer.html
@@ -1,10 +1,26 @@
 <div id="barraaceptacion" style="display: block;">
     <div class="inner">
+
+			<h4>HORARIO ESPECIAL NAVIDEÑO!</h4><br>
+			<p style="color:#fff;font-size:16px;text-align:center">
+					Dias 24 y 31 de diciembre disponibles hasta las 19:00.<br>
+					Dias 25 de diciembre y 1 de enero estaremos cerrados. 
+	
+	
+			</p>
         Utiliza cookies propia y de terceros para analíticas y estadísticas de la web. Si continúa navegando consideramos que acepta el uso. Web con contenido para adultos, queda prohibida la entrada a menores de 18 años.
         <a href="javascript:void(0);" class="ok" onclick="PonerCookie();"><b>OK</b></a>
       <!--  <a href="http://politicadecookies.com" target="_blank" class="info">Más información</a>-->
-    </div>
+	</div>
+	
+
+
+
+
+
 </div>
+	
+
 
 <script>
 function getCookie(c_name){
