--- a/footer.html
+++ b/footer.html
@@ -1,14 +1,7 @@
 <div id="barraaceptacion" style="display: block;">
     <div class="inner">
 
-			<h4>HORARIO ESPECIAL NAVIDEÑO!</h4><br>
-			<p style="color:#fff;font-size:16px;text-align:center">
-					Dias 24 y 31 de diciembre disponibles hasta las 19:00.<br>
-					Dias 25 de diciembre y 1 de enero estaremos cerrados. 
-	
-	
-			</p>
-        Utiliza cookies propia y de terceros para analíticas y estadísticas de la web. Si continúa navegando consideramos que acepta el uso. Web con contenido para adultos, queda prohibida la entrada a menores de 18 años.
+		Utiliza cookies propia y de terceros para analíticas y estadísticas de la web. Si continúa navegando consideramos que acepta el uso. Web con contenido para adultos, queda prohibida la entrada a menores de 18 años.
         <a href="javascript:void(0);" class="ok" onclick="PonerCookie();"><b>OK</b></a>
       <!--  <a href="http://politicadecookies.com" target="_blank" class="info">Más información</a>-->
 	</div>
@@ -244,7 +237,9 @@ function PonerCookie(){
 
 
 </script>
-<script type="text/javascript">
+
+<!--NAVIDAD-->
+<!--<script type="text/javascript">
 
 /******************************************
 * Snow Effect Script- By Altan d.o.o. (http://www.altan.hr/snow/index.html)
@@ -344,7 +339,7 @@ if (ie4up||ns6up){
 		setTimeout("hidesnow()", hidesnowtime*1000)
 		}
 
-</script>
+</script>-->
 
 
 
@@ -354,7 +349,9 @@ if (ie4up||ns6up){
 
 
 </body>
-<script src='/js/snowfall.jquery.js'></script>
+
+<!-- NAVIDAD -->
+<!--<script src='/js/snowfall.jquery.js'></script>
 <script type='text/javascript'> 
 	
 $(document).ready(function(){
@@ -363,6 +360,6 @@ $(document).snowfall({deviceorientation : true, round : true, minSize: 1, maxSiz
 
 });
 
- </script>
+ </script>-->
 
 </html>
