--- a/movil/footer.html
+++ b/movil/footer.html
@@ -77,8 +77,8 @@
 
 
 </body>
-<script src='/js/snowfall.jquery.js'></script>
-<script type='text/javascript'> 
+<!--NAVIDAD--><script src='/js/snowfall.jquery.js'></script>
+<!--<script type='text/javascript'> 
 	
 $(document).ready(function(){
 			
@@ -86,5 +86,5 @@ $(document).snowfall({deviceorientation : true, round : true, minSize: 1, maxSiz
 
 });
 
- </script>
+ </script>-->
 </html>
