Se agrego gestion de reservas en promociones. Se Arregló el formulario de casting.Version ingles lista

--- a/cabecera.html
+++ b/cabecera.html
@@ -1,11 +1,6 @@
 	<div class="preloader">
 		<div class="preloader_image">
 		</div>
-		<div style="text-align: center;position: relative;top: 60%;-ms-transform: translateY(-50%);
-		-webkit-transform: translateY(-50%);
-		transform: translateY(-50%);">
-			<h2 style="color:#EDCF91;">Espere un momento por favor...</h2>
-		</div>
 	</div>
 
 
@@ -91,13 +86,8 @@
 
 									</li>
 									<li>
-										<a href="#">Idioma</a>
-										<ul style="background: rgba(0,0,0,0.3)">
-											<li style="background: rgba(0,0,0,0.3)">
-											<img style="height: 20px;margin-left: 15px;margin-right: 10px" src="/images/bandera_es.png" alt="Bandera español"><img style="height: 15px;" src="/images/bandera_en.png" alt="Bandera inglés">
-											</li>
-
-										</ul>
+										<a href="https://eliteescortmadrid.uk/"><img  title="English Site" style="height: 15px;" src="/images/bandera_en.png" alt="Bandera inglés"></a>
+										
 
 									</li>
 
